CJ fixed horizontal scrollbar and added README

--- a/trailmaker_OnMyOwn.css
+++ b/trailmaker_OnMyOwn.css
@@ -1,7 +1,7 @@
 /*CSS script for Trailmaker Project*/
 #content {
     font-family: arial, helvetica, sans-serif;
-    background-color: #9DD6F5;
+    background-color: #D2CED9;
 }
 
 #bookmarks{
@@ -9,7 +9,7 @@
 	width:48%;
 	margin-right:1%;
 	margin-left:.5%;
-	min-height:300px;
+	min-height:350px;
 	background-color: #fff;
 	border-radius:50px;
 	padding: 5px;
@@ -25,7 +25,7 @@
  
 #new-trail{
 	float:left;
-	min-height:300px;
+	min-height:350px;
 	background-color: #fff;
 	border-radius:50px;
 	width:100%;
@@ -48,7 +48,7 @@ iframe {
 	float: left;
 	width: 94%;
 	margin-right: 1%;
-	min-height: 250px;
+	min-height: 200px;
 	border-radius:20px;
 	padding: 5px;
 }
